# Caculinha_BI

./: $null  .gitattributes  .gitignore  ACTION_PLAN.md  CLAUDE.md  DIAGNOSTIC_REPORT.md  Dockerfile  FIX_REPORT_CODEX.md  GEMINI.md  PLAYWRIGHT_BASELINE_REPORT.md  PLAYWRIGHT_FINAL_REPORT.md  README.md  ROUTE_RUNTIME_MATRIX.md  RUN_E2E_CLICK.bat  RUN_NATIVE_ALL.bat  RUN_NATIVE_ALL.ps1  STABILIZATION_REPORT.md  START_LOCAL_DEV.bat  START_SYSTEM_V2026.bat  Taskfile.yml  analise_bi_solution.md  audit_platform.py  backend_routes_runtime.json  codigo_implementacao.md  debug_response_latest.json  diag_imports.py  docker-compose.dev.yml  docker-compose.yml  general_verification_report.txt  git_log.txt  git_status.txt  implement-bi-solution.md  implementacao_pratica.md  local_uncommitted.diff  package-lock.json  package.json  platform_audit_report.json  playground-bi-implementation-plan.md  pnpm-lock.yaml  pytest.ini  (+8 more)
backend/: .dockerignore  .env.example  .env.supabase  .gitignore  Dockerfile  __init__.py  alembic.ini  benchmark_llm.py  check_column_types.py  check_columns.py  check_columns_full.py  check_config.py  check_empty_values.py  check_key.py  check_parquet_columns.py  check_parquet_users.py  check_product.py  check_required_columns.py  check_segments.py  check_supabase.py  check_supabase_admin.py  check_table_structure.py  check_user_profile.py  columns_list.txt  consultar_dados.py  create_admin_supabase.py  create_restricted_users_supabase.py  deep_knowledge_test_output_2.txt  deep_knowledge_test_output_3.txt  deep_knowledge_test_output_4.txt  deep_knowledge_test_output_5.txt  deep_knowledge_test_output_6.txt  deep_knowledge_test_output_7.txt  deep_knowledge_test_output_8.txt  deep_knowledge_test_output_9.txt  diagnose_cols.py  diagnose_sqlserver.py  diagnose_supabase_auth.py  diagnose_suppliers.py  diagnostico_login_supabase.py  (+40 more)
backend/api/: __init__.py
backend/app/: __init__.py
backend/application/: __init__.py
backend/core/: __init__.py  pipeline_factory.py
backend/data/: admmat.duckdb  agentbi.db  catalog_v1.duckdb  parquet_schema_audit.json  product_catalog.duckdb
backend/database/: supabase_migrations.sql
backend/debug_llm_responses/: response_20260128_142500.json  response_20260128_142854.json  (+103 more)
(+1162 files in other folders)
